overlay/dev/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: aylee-front
spec:
  template:
    spec:
      serviceAccountName: dev-aylee-front
