overlay/dev/gateway-patch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aylee-front
spec:
  servers:
    - hosts:
        - dev-aylee-demo.apps.ldcc-cluster.gavd.p1.openshiftapps.com
      port:
        number: 80
        name: http
        protocol: HTTP
