overlay/dev/virtualservice-patch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aylee-front
spec:
  hosts:
    - dev-aylee-demo.apps.ldcc-cluster.gavd.p1.openshiftapps.com
  gateways:
    - dev-aylee-front
  http:
    - name: Canary
      match:
        - headers:
            rollout-version:
              exact: "Canary"
      route:
        - destination:
            host: dev-aylee-front
            subset: Canary
    - name: Random
      route:
        - destination:
            host: dev-aylee-front
